# GENETICS

./: README.md
Genetics/: CMakeLists.txt  Ventana.cpp  Ventana.h  data.cpp  data.h  main.cpp
HalconMilenario/: CMakeLists.txt  main.cpp
HalconMilenario/Structure/: MainWindow.cpp  MainWindow.h
HalconMilenario/data/: LinkedList.cpp  LinkedList.h  Map.cpp  Map.h  Maze.cpp  Maze.h  Nodo.cpp  Nodo.h
